--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo-google-fonts/montserrat": "^0.1.0",
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-community/datetimepicker": "^3.0.8",
+    "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/viewpager": "^4.2.0",
     "@react-navigation/bottom-tabs": "^5.9.2",
@@ -20,12 +20,14 @@
     "@react-navigation/stack": "^5.12.8",
     "add": "^2.0.6",
     "expo": "~38.0.8",
+    "expo-av": "^8.7.0",
     "expo-font": "~8.2.1",
     "expo-image-picker": "^9.2.1",
     "expo-linear-gradient": "~8.2.1",
     "expo-location": "^10.0.0",
     "expo-status-bar": "^1.0.2",
     "firebase": "^8.1.2",
+    "geolib": "^3.3.1",
     "native-base": "^2.13.15",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -36,6 +38,8 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "^0.12.0-beta-1",
     "react-native-maps": "^0.27.1",
+    "react-native-modal": "^11.6.1",
+    "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "~3.0.7",
